Add div for input & button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <div class="container">
         <header>
             <h1>Metric/Imperial Unit Converter</h1>
-            <input type="number" id="input-el" class="input-number">
-            <button id="button-el" class="convert-btn">Convert</button>
+            <div class="input-section">
+                <input type="number" id="input-el" class="input-number">
+                <button id="button-el" class="convert-btn">Convert</button>
+            </div>
         </header>
         <main>
             <section>
