Styling main section

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <main>
             <section>
                 <h3>Length (Meter/Feet)</h3>
-                <p id="length-el">render through js</p>
+                <p id="length-el">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
             </section>
             <section>
                 <h3>Volume (Liters/Gallons)</h3>
-                <p id="volume-el">render through js</p>
+                <p id="volume-el">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
             </section>
             <section>
                 <h3>Mass (Kilograms/Pounds)</h3>
-                <p id="mass-el">render through js</p>
+                <p id="mass-el">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
             </section>
         </main>
     </div>
