--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
         <header>
             <h1>Metric/Imperial Unit Converter</h1>
             <div class="input-section">
-                <input type="number" id="input-el" class="input-number">
+                <input type="number" id="input-el" autocomplete="off">
                 <button id="button-el" class="convert-btn">Convert</button>
             </div>
         </header>
         <main>
             <section>
                 <h3>Length (Meter/Feet)</h3>
-                <p id="length-el">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+                <p id="length-el">-</p>
             </section>
             <section>
                 <h3>Volume (Liters/Gallons)</h3>
-                <p id="volume-el">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+                <p id="volume-el">-</p>
             </section>
             <section>
                 <h3>Mass (Kilograms/Pounds)</h3>
-                <p id="mass-el">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+                <p id="mass-el">-</p>
             </section>
         </main>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
