Add div for theme-switch

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </head>
 <body>
     <div class="container">
+        <div class="theme-switch-wrapper">
+            <label class="theme-switch" for="checkbox">
+                <input type="checkbox" id="checkbox" />
+                <div class="slider round"></div>
+          </label>
+        </div>
         <header>
             <h1>Metric/Imperial Unit Converter</h1>
             <div class="input-section">
